# lock-free-ring-buffer

./: .gitignore  CMakeLists.txt  README.md
bench/: benchmark_boost_lockfree.cpp  benchmark_futex.cpp  benchmark_ring_buffer.cpp
bench/reports/: bench_20260206_161019.json  bench_20260206_161019.md  bench_20260206_162437_mpmc.json  bench_20260206_162437_mpmc.md  bench_20260206_171829_typed.json  bench_20260206_171829_typed.md  bench_20260206_173529_burst.json  bench_20260206_173529_burst.md  bench_20260206_180904_items.json  bench_20260206_180904_items.md  bench_20260206_181554_perthread.json  bench_20260206_181554_perthread.md  bench_20260210_latest.json  bench_20260210_latest.md  bench_20260211_spsc.json  bench_20260211_spsc.md  bench_20260211_spsc_typed.json  bench_20260211_spsc_typed.md
docs/: benchmark-report-futex-poc.md  proposal-lf-ring-migration.md  proposal-lock-free-ipc-migration.md
include/lf_ring/: futex.hpp  ipc_adapter.hpp  ring_layout.hpp  ring_writer.hpp  shared_latest.hpp  shared_memory_mapping.hpp  shared_ring_buffer.hpp  shared_ring_buffer_mpmc.hpp  shared_ring_buffer_spsc.hpp  spsc_queue.hpp  typed_message.hpp
src/: shared_memory_mapping.cpp  shared_ring_buffer.cpp  shared_ring_buffer_mpmc.cpp  shared_ring_buffer_spsc.cpp
tests/: test_ring_buffer.cpp  test_shared_latest.cpp  test_spsc_queue.cpp  test_typed_message.cpp
